objects/Step__c.object
<CustomObject>
    <description>Steps are associated with tasks.</description>
    <fields>
        <fullName>Body__c</fullName>
        <description>Detail step by step instructions</description>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description for each step, that will be shown in the Detail Modal in the eLearning Page</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Steps</relationshipLabel>
        <relationshipName>Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_points__c</fullName>
        <description>Represents total points gained by a user, if he/she finishes the step without any hints.</description>
        <inlineHelpText>Represents total points gained by a user, if he/she finishes the step without any hints.</inlineHelpText>
        <label>Total points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VideoID__c</fullName>
        <description>add the youtube video ID only</description>
        <inlineHelpText>Only youtube ID.</inlineHelpText>
        <label>VideoID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Body__c</columns>
        <columns>Sequence__c</columns>
        <columns>Task__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>